# episteme

./: .gitignore  ARCHITECTURE.md  ATTRIBUTION.md  DESITTER_REBUILD_PLAN.md  EXAMPLES.md  EXAMPLES.md.bak  HORIZON_REBUILD_PLAN.md  LEGAL.md  NOTICE  README.md  TRACKER.md  pyproject.toml
.local/: ARCHITECTURE_BOOK.md.bak
src/desitter/: __init__.cover  __init__.py  __main__.py  client.py  config.py
src/desitter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/desitter/adapters/: json_repository.cover  json_repository.py  markdown_renderer.py  payload_validator.py  transaction_log.cover  transaction_log.py
src/desitter/client/: __init__.py  _client.py  _core.py  _hypothesis.py  _registry.py  _resources.py  _structure.py  _types.py
src/desitter/controlplane/: _gateway_catalog.py  _gateway_results.py  automation.py  check.py  export.py  factory.py  gateway.py  prose.py  validate.py
src/desitter/epistemic/: __init__.py  _ports_artifacts.py  _ports_services.py  _ports_web.py  codec.py  errors.py  invariants.py  model.cover  model.py  ports.py  types.py  web.py
src/desitter/interfaces/: __init__.py
src/desitter/views/: __init__.py  health.py  metrics.py  render.py  status.py
src/episteme/: __init__.py  __main__.py  config.py
src/episteme/client/: __init__.py  _client.py  _core.py  _hypothesis.py  _registry.py  _resources.py  _structure.py  _types.py
src/episteme/controlplane/: __init__.py  _gateway_catalog.py  _gateway_results.py  check.py  factory.py  gateway.py  render.py  validate.py
src/horizon_research/: __init__.py  __main__.py  config.py
tests/: __init__.py  conftest.py  test_config.py  test_views_dataclasses.py
tests/adapters/: __init__.py  test_json_repository.py  test_payload_validator.py  test_transaction_log.py
tests/cli/: __init__.py
tests/client/: test_client.py
tests/controlplane/: __init__.py  test_automation.py  test_check.py  test_gateway.py  test_validate.py
tests/epistemic/: __init__.py  conftest.py  test_graph.py  test_invariants.py  test_model.py  test_ports.py  test_types.py  test_web.py  test_web_backlink_ownership.py  test_web_immutability.py  test_web_queries.py  test_web_register.py  test_web_remove.py  test_web_transitions.py  test_web_update.py
tests/mcp/: __init__.py
tests/views/: test_health_status_metrics.py
(+78 files in other folders)
