[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desitter"
version = "0.0.2"
description = "A control plane for managing research epistemic webs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "click>=8.1",
    "jsonschema>=4.21",
    "rich>=13.0",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=0.1",
]
compute = [
    "numpy>=1.26",
    "scipy>=1.12",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
all = [
    "desitter[mcp,compute]",
]

[project.scripts]
ds = "desitter.interfaces.cli.main:cli"
ds-mcp = "desitter.interfaces.mcp.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/desitter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["desitter"]
