[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "episteme"
version = "0.0.2"
description = "A control plane for managing research epistemic webs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/episteme"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["episteme"]
